<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="@dimen/list_item_height">

    <LinearLayout
        android:layout_weight="2"
        style="@style/list_item_linearlayout">

    <TextView
        style="@style/list_item_titleText"
        android:text="@string/book_name"/>

    <TextView
        android:id="@+id/book_name"
        style="@style/list_item_contentText"
        tools:text="@string/bookname_replacer"/>
    </LinearLayout>

    <LinearLayout
        style="@style/list_item_linearlayout"
        android:layout_weight="1">

        <TextView
            android:text="@string/author"
            style="@style/list_item_titleText" />

        <TextView
            tools:text="@string/author_replacer"
            android:id="@+id/author_name"
            style="@style/list_item_contentText" />
    </LinearLayout>

    <LinearLayout
        style="@style/list_item_linearlayout"
        android:layout_weight="1">

        <TextView
            android:text="@string/publisher"
            style="@style/list_item_titleText" />

        <TextView
            tools:text="@string/publisher_replacer"
            android:id="@+id/publisher_name"
            style="@style/list_item_contentText" />
    </LinearLayout>

</LinearLayout>